DSM-PEPPER-370-some-alignment-issues-fixed (#1924)

--- a/ddp-workspace/projects/ddp-dsm-ui/src/app/participant-list/participant-list.component.css
+++ b/ddp-workspace/projects/ddp-dsm-ui/src/app/participant-list/participant-list.component.css
@@ -4,6 +4,10 @@
   margin-bottom: 0;
 }
 
+hr, ul {
+  margin: 0!important;
+}
+
 .NO-PADDING-START{
   padding-inline-start: 0;
   list-style-type:none;
